# active-trace-BontornoVernierMas

./: .gitignore  CHANGES.md  CLAUDE.md  README.md  docker-compose.yml  skills-lock.json
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_tenant.py  0002_usuario_auth.py  0003_rbac.py  0004_audit_log.py  0005_estructura_academica.py  0006_avisos_y_acks.py  0007_programas_y_fechas_academicas.py  0008_usuarios_pii_asignaciones.py  0009_version_padron_entrada_padron.py  0010_calificacion_umbral_materia.py  0011_encuentros_y_guardias.py  0012_add_finalizado_lms_calificacion.py  0013_comunicacion.py  0014_tareas_y_comentarios.py  0015_evaluaciones_y_coloquios.py  0016_mensaje_interno.py  0017_liquidaciones_y_honorarios.py
backend/app/: main.py
backend/app/core/: audit.py  config.py  crypto.py  (+12 more)
backend/scripts/: seed_dev.py
backend/tests/: conftest.py  test_analisis.py  test_app_startup.py  test_asignaciones.py  test_audit_log.py  test_auditoria.py  test_auth.py  test_avisos.py  test_calificaciones.py  test_coloquios.py  test_comunicaciones.py  test_config.py  test_crypto.py  test_database.py  test_encuentros.py  test_equipos_integration.py  test_equipos_repository.py  test_equipos_schemas.py  test_equipos_service.py  test_estructura_academica.py  test_fechas_academicas.py  test_health.py  test_liquidaciones.py  test_padron.py  test_perfil_y_mensajeria.py  test_programas.py  test_rbac.py  test_tareas.py  test_tenancy.py  test_usuarios_pii.py
backend/workers/: __init__.py  comunicacion_worker.py
(+371 files in other folders)
